# moccacino

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 36qww7173dwka2da228mh4h2c352l7yj-source  90bxrn9hah1pmx79pvi5n9yhdqxx395y-source
moca-data/: Cargo.toml
moca-data/src/: finite_automata.rs  finite_automaton.rs  lib.rs  main.rs  pushdown_automata.rs  state.rs  state_machine.rs  tests.rs
moca-data/src/tests/: finite_automata_tests.rs  mod.rs  pushdown_automata_tests.rs
moca-gui/: Cargo.toml
moca-gui/src/: gui copy.txt  gui.rs  main.rs  state_machine.rs  tikz_export.rs
mocaccino/: Cargo.toml
mocaccino/src/: main.rs
